--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left-container">
-            <img src="images/laundry.avif">
+            <img src="laundry.avif">
             <br>
             <br>
             <br>
